# projet-morpion

./: CMakeLists.txt  README.md
executables/: morpion-client  morpion-serveur
morpion-client/: morpion-client.c  morpion-client.h
morpion-outils/: outils-messages.c  outils-messages.h
morpion-serveur/: gestionnaire-client.c  gestionnaire-client.h  gestionnaire-partie.c  gestionnaire-partie.h  morpion-moteur.c  morpion-moteur.h  morpion-serveur.c  morpion-serveur.h
